<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/etBirthDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="60dp"
        android:ems="7"
        android:hint="@string/enter_birth_date"
        android:inputType="number"
        android:textAllCaps="false"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/tvBirthdate"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextFields" />

    <Button
        android:id="@+id/ctButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="calculateAge"
        android:text="@string/calculate_age"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.883"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etBirthDate"
        app:layout_constraintVertical_bias="0.425" />

    <TextView
        android:id="@+id/tvAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="10dp"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ctButton"
        app:layout_constraintVertical_bias="0.25" />

    <TextView
        android:id="@+id/tvFooter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/made_with_by_areeba"
        android:textAllCaps="true"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAge"
        app:layout_constraintVertical_bias="0.896" />

    <TextView
        android:id="@+id/tvBirthMonth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="69dp"
        android:text="@string/birthmonth"
        app:layout_constraintBottom_toTopOf="@+id/tvBirthYear"
        app:layout_constraintEnd_toEndOf="@+id/tvBirthdate" />

    <TextView
        android:id="@+id/tvBirthYear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:text="@string/birthyear"
        app:layout_constraintEnd_toEndOf="@+id/tvBirthMonth"
        app:layout_constraintTop_toBottomOf="@+id/tvBirthMonth" />

    <EditText
        android:id="@+id/etBirthMonth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="29dp"
        android:ems="7"
        android:hint="@string/enter_birth_month"
        android:inputType="number"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/tvBirthMonth"
        app:layout_constraintTop_toBottomOf="@+id/etBirthDate" />

    <EditText
        android:id="@+id/etBirthYear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:ems="7"
        android:hint="@string/enter_birth_year"
        android:inputType="number"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/etBirthMonth"
        app:layout_constraintTop_toBottomOf="@+id/etBirthMonth" />

    <TextView
        android:id="@+id/tvBirthdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="61dp"
        android:layout_marginTop="67dp"
        android:layout_marginBottom="64dp"
        android:text="@string/birthdate"
        app:layout_constraintBottom_toTopOf="@+id/tvBirthMonth"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.524" />

</androidx.constraintlayout.widget.ConstraintLayout>